# serializer version: 1
# name: test_from_imdb_id_snapshots[Superman.2025.2160p.MA.WEB-DL.DDP5.1.Atmos.H.265.HUN-FULCRUM-details0]
  dict({
    'attributes': list([
      dict({
        'id': 'hun',
        'name': 'magyar',
        'pattern': '\\b(hun(?:[-_. ]?dub)?|magyar|hungarian)\\b',
        'preference_id': 'language',
        'short_name': 'HUN',
      }),
      dict({
        'id': 'x265',
        'name': 'x265 (HEVC)',
        'pattern': '\\b(x265|h\\.?265|hevc)\\b',
        'preference_id': 'video-codec',
        'short_name': 'x265',
      }),
      dict({
        'id': 'eac3',
        'name': 'Dolby Digital Plus',
        'pattern': '\\b(ddp(?:2\\.0|5\\.1|7\\.1)?|dd\\+(?:2\\.0|5\\.1|7\\.1)?|e[-_. ]?ac[-_. ]?3)\\b',
        'preference_id': 'audio-quality',
        'short_name': 'DDP',
      }),
      dict({
        'id': 'dolby-atmos',
        'name': 'Dolby Atmos',
        'pattern': '\\b(atmos)\\b',
        'preference_id': 'audio-spatial',
        'short_name': None,
      }),
      dict({
        'id': '5.1',
        'name': '5.1 (Térhangzás)',
        'pattern': '(5\\.1|6ch)',
        'preference_id': 'audio-channels',
        'short_name': '5.1',
      }),
      dict({
        'id': '2160p',
        'name': 'UHD (4K)',
        'pattern': '(2160p|4k[-_. ](?:UHD|HEVC|BD)|(?:UHD|HEVC|BD)[-_. ]4k|\\b(4k)\\b|COMPLETE.UHD|UHD.COMPLETE)',
        'preference_id': 'resolution',
        'short_name': '4K',
      }),
      dict({
        'id': 'sdr',
        'name': 'SDR',
        'pattern': None,
        'preference_id': 'video-quality',
        'short_name': None,
      }),
      dict({
        'id': 'web-dl',
        'name': 'Web-DL',
        'pattern': '\\b(web[-_. ]?dl|web)\\b',
        'preference_id': 'source',
        'short_name': None,
      }),
      dict({
        'id': 'theatrical',
        'name': 'Moziváltozat (Theatrical)',
        'pattern': None,
        'preference_id': 'edition',
        'short_name': 'Theatrical',
      }),
    ]),
    'file_index': 0,
    'file_name': 'fulcrum-superman.2025.2160p.web.ma.mkv',
    'file_size': 25168000000,
    'indexer_account': dict({
      'cookies': None,
      'created_at': datetime.datetime(2026, 6, 9, 17, 39, 59, 552543),
      'download_full_torrent': False,
      'hit_and_run': None,
      'indexer_id': 'test_indexer',
      'keep_seed_seconds': None,
      'password': 'test_password',
      'updated_at': datetime.datetime(2026, 6, 9, 17, 39, 59, 552543),
      'username': 'test_user',
    }),
    'info_hash': 'abcdef123456',
    'is_persisted_torrent': False,
    'play_url': 'http://test/api/test-api-key/stream/mocked-token',
    'seeders': 150,
    'torrent_id': 'test_torrent_id',
    'torrent_name': 'Superman.2025.2160p.MA.WEB-DL.DDP5.1.Atmos.H.265.HUN-FULCRUM',
  })
# ---
# name: test_from_imdb_id_snapshots[The.Boondocks.S02.HUN.DVDRip.XviD-HSF-details1]
  dict({
    'attributes': list([
      dict({
        'id': 'hun',
        'name': 'magyar',
        'pattern': '\\b(hun(?:[-_. ]?dub)?|magyar|hungarian)\\b',
        'preference_id': 'language',
        'short_name': 'HUN',
      }),
      dict({
        'id': 'dvd-rip',
        'name': 'DVD Rip',
        'pattern': '\\b(dvdrip)\\b',
        'preference_id': 'source',
        'short_name': 'DVDRip',
      }),
      dict({
        'id': 'sdr',
        'name': 'SDR',
        'pattern': None,
        'preference_id': 'video-quality',
        'short_name': None,
      }),
      dict({
        'id': 'theatrical',
        'name': 'Moziváltozat (Theatrical)',
        'pattern': None,
        'preference_id': 'edition',
        'short_name': 'Theatrical',
      }),
    ]),
    'file_index': 1,
    'file_name': 'hsf-bndcks-202.avi',
    'file_size': 186245000,
    'indexer_account': dict({
      'cookies': None,
      'created_at': datetime.datetime(2026, 6, 9, 17, 39, 59, 552543),
      'download_full_torrent': False,
      'hit_and_run': None,
      'indexer_id': 'test_indexer',
      'keep_seed_seconds': None,
      'password': 'test_password',
      'updated_at': datetime.datetime(2026, 6, 9, 17, 39, 59, 552543),
      'username': 'test_user',
    }),
    'info_hash': 'abcdef123456',
    'is_persisted_torrent': False,
    'play_url': 'http://test/api/test-api-key/stream/mocked-token',
    'seeders': 150,
    'torrent_id': 'test_torrent_id',
    'torrent_name': 'The.Boondocks.S02.HUN.DVDRip.XviD-HSF',
  })
# ---
